// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render no results 1`] = `
<div>
  <h2
    class="sc-kiPvrU ceZDKl"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    D’après les éléments saisis, dans votre situation, la convention collective ne prévoit pas d’heures d’absence autorisée pour rechercher un emploi.
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt fANzfq sc-cOxWqc VPdUE"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-kiPvrU ceZDKl"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            Entreprises de la publicité et assimilées (IDCC 86)
          </strong>
        </li>
        <li>
          Type de rupture du contrat de travail
           : 
          <strong>
            Rupture de la période d'essai
          </strong>
        </li>
        <li>
          Initiative de la rupture de la période d'essai
           : 
          <strong>
            Le salarié
          </strong>
        </li>
        <li>
          Catégorie professionnelle
           : 
          <strong>
            Agents de maîtrise et Techniciens
          </strong>
        </li>
      </ul>
      <h2
        class="sc-kiPvrU ceZDKl"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article 33 (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCC.do?idSectionTA=KALISCTA000005753582&cidTexte=KALITEXT000005682357&idConvention=KALICONT000005635630&dateTexte=29990101"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article 33
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-kSGOQU hrCOuh bqQeuZ"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-dvEHMn jfRMop"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise peut prévoir que le salarié bénéficie d’heures d’absence autorisée pour rechercher un emploi pendant le préavis.
    </p>
  </div>
</div>
`;

exports[`<StepResult /> should render with duration 1`] = `
<div>
  <h2
    class="sc-kiPvrU ceZDKl"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    D’après les éléments saisis, durant son préavis, le salarié peut s’absenter pour rechercher un emploi pendant
     : 
    <strong
      class="sc-cLNonn sc-iJbNxu jeljMz csuprU"
    >
      2 heures par jour
    </strong>
    .
  </p>
  <h2
    class="sc-kiPvrU ceZDKl"
  >
    Rémunération pendant les heures d’absence autorisée
  </h2>
  <p>
    Le salaire est maintenu.
  </p>
  <h2
    class="sc-kiPvrU ceZDKl"
  >
    Conditions d’utilisation
  </h2>
  <p>
    Le salarié fixe par accord avec l'employeur la période de la journée pendant laquelle il prend ces 2 heures. Si l'employeur et le salarié le décident ensemble, ces heures peuvent être prises, de façon groupée, en une ou plusieurs journées ou demi-journées, consécutives ou non. En cas d'absence d'accord entre l'employeur et le salarié, ces 2 heures sont fixées un jour par l'employeur et, le jour suivant, par le salarié. Lorsque le salarié a retrouvé un emploi, il doit immédiatement en informer l'employeur et ne pourra plus utiliser les heures d'absence autorisée pour rechercher un emploi.
  </p>
  <div>
    <button
      aria-expanded="false"
      class="sc-hhOBVt fANzfq sc-cOxWqc VPdUE"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="sc-ftTHYK jiFzuu"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      <span
        class="sc-AHaJN jfcIdr"
        font-size="hsmall"
        font-weight="600"
      >
        Voir le détail du calcul
      </span>
    </button>
    <div
      class="sc-bCfvAP iEBQCA"
    >
      <h2
        class="sc-kiPvrU ceZDKl"
      >
        Éléments saisis
      </h2>
      <ul>
        <li>
          Convention collective
           : 
          <strong>
            Entreprises de la publicité et assimilées (IDCC 86)
          </strong>
        </li>
        <li>
          Type de rupture du contrat de travail
           : 
          <strong>
            Démission
          </strong>
        </li>
        <li>
          Catégorie professionnelle
           : 
          <strong>
            Employés
          </strong>
        </li>
      </ul>
      <h2
        class="sc-kiPvrU ceZDKl"
      >
        Sources
      </h2>
      <ul>
        <li>
          <a
            aria-label="Article 29 (nouvelle fenêtre)"
            href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005857303&cidTexte=KALITEXT000005682357&dateTexte=19740607"
            rel="noopener noreferrer"
            target="_blank"
          >
            Article 29
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="sc-lllmON sc-kSGOQU hrCOuh bqQeuZ"
  >
    <div
      class="sc-ehvNnt eQWqAO"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M44.586 36.215h.921l-.502-.773-8.424-12.96a.5.5 0 1 1 .838-.545l9.429 14.505a.5.5 0 0 1-.42.773H5.571a.5.5 0 0 1-.419-.773L25.581 5.014a.5.5 0 0 1 .838 0l5.107 7.857a.5.5 0 0 1-.838.545l-4.269-6.567-.42-.645-.418.645L6.995 35.442l-.502.773h38.093zM34.5 18a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
            fill="#3E486E"
            stroke="#4E6896"
          />
          <path
            d="M26 14.714a1.57 1.57 0 0 0-1.571 1.571v9.429a1.571 1.571 0 0 0 3.143 0v-9.429c0-.868-.704-1.571-1.572-1.571zm0 14.143A1.571 1.571 0 1 0 26 32a1.571 1.571 0 0 0 0-3.143z"
            fill="#FF7067"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          class="sc-GKYbw cUdVqX sc-dvEHMn jfRMop"
        >
          Attention il peut exister une durée plus favorable
        </p>
      </div>
    </div>
    <p>
      Si un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise plus récent prévoit des heures d’absence autorisée pour rechercher un emploi pendant le préavis, le salarié en bénéficie si ces mesures sont plus favorables que la convention collective.
    </p>
  </div>
</div>
`;
